--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -214,20 +214,40 @@
   "japanese_rules": "Japanese Rules",
   "jigo": "Draw",
   "joseki_already_completed": "This joseki is already completed.",
-  "joseki_comment_avalanche_joseki": "Complex avalanche joseki requiring precise reading.",
-  "joseki_comment_chinese_fuseki": "Chinese opening where Black builds a large framework.",
-  "joseki_comment_double_flying_goose_joseki": "Double flying goose formation emphasizing outside influence.",
-  "joseki_comment_kobayashi_fuseki": "Kobayashi opening balancing territory and influence.",
-  "joseki_comment_komoku_high_approach_joseki": "Komoku high approach joseki with rich variations.",
-  "joseki_comment_komoku_one_space_high_approach": "Common variations of the komoku one-space high approach.",
-  "joseki_comment_san_san_basic": "Basic 3-3 joseki: Black takes corner territory, White gets outside influence.",
-  "joseki_comment_star_point_small_approach": "Basic response to the star point small approach.",
-  "joseki_comment_star_point_small_approach_joseki": "One of the most common star point joseki.",
-  "joseki_comment_taisha_joseki": "Basic form of the Taisha joseki.",
-  "joseki_comment_takamoku_basic": "Takamoku joseki emphasizes outside influence.",
-  "joseki_comment_three_star_fuseki": "Three-star opening emphasizing central influence.",
-  "joseki_comment_three_three_invasion": "Basic 3-3 invasion joseki; position is even.",
-  "joseki_comment_zhen_shen_tou": "Zhen Shen Tou tesuji used for attack.",
+  "joseki_comment_avalanche_joseki": "Avalanche joseki is famous for sharp fighting and long tactical sequences. Outcomes depend on precise reading and the local strength balance. Use it only when the whole-board situation supports heavy fighting.",
+  "joseki_comment_chinese_fuseki": "Chinese fuseki shapes a large framework on the lower side with a star point, komoku, and low extension. White typically invades or reduces, so Black must choose between enclosing and trading. Ideal for early framework and middle-game pressure.",
+  "joseki_comment_double_flying_goose_joseki": "Double flying goose forms a connected flying shape along the side, emphasizing speed and outside influence. Black expands with successive knights but must watch for cuts and pressure. The goal is to turn outside strength into attacks or side territory.",
+  "joseki_comment_kobayashi_fuseki": "Kobayashi fuseki balances territory and influence with a star point, komoku, and high extension. White often attacks the lower-side framework, and Black must switch between attack and defense smoothly. A strong choice for flexible players.",
+  "joseki_comment_komoku_high_approach_joseki": "Komoku high approach joseki has rich variations: Black can play a small knight, pincer, or block. It often leads to a territory vs. influence trade, shaped by the whole-board context. Avoid giving White free thickness.",
+  "joseki_comment_komoku_one_space_high_approach": "The one-space high approach to komoku aims for outside influence and speed. Black can pincer to attack or defend the corner for stability. Direction and handling potential splits are the key decisions.",
+  "joseki_comment_san_san_basic": "Basic 3-3 joseki: Black enters the corner and secures territory quickly. White turns outward to build thickness and often keeps sente to develop elsewhere. Black must respect the pressure from White's outside influence.",
+  "joseki_comment_star_point_small_approach": "This basic line shows a clear exchange: Black secures the corner while White takes outside influence. White often keeps sente to expand, while Black settles the corner. A good baseline joseki for beginners.",
+  "joseki_comment_star_point_small_approach_joseki": "One of the most common star point openings. Black chooses a pincer or a one-point jump to decide the scale of fighting, while White has multiple replies. Keep the shape efficient and avoid being pushed low.",
+  "joseki_comment_taisha_joseki": "Taisha is a highly complex corner joseki with many branches and heavy fighting. The balance between thickness and territory depends on the whole-board context. It demands accurate reading and good sente judgment.",
+  "joseki_comment_takamoku_basic": "The basic takamoku joseki values outside influence and speed rather than maximum corner territory. Black develops outward thickness and accepts a lighter corner, while White looks to reduce or exploit the framework. Suits active, fighting-oriented play.",
+  "joseki_comment_three_star_fuseki": "Three-star fuseki links star points to build central influence and speed rather than immediate territory. White often invades from the sides, and Black must develop corners to cash in the influence. Suits an aggressive, attack-oriented style.",
+  "joseki_comment_three_three_invasion": "The 3-3 invasion dives into the corner for quick life and secure territory. White builds outside influence and often takes the initiative. The key is whether that influence converts into real profit; otherwise Black's corner is large. A steady, territory-oriented choice.",
+  "joseki_comment_zhen_shen_tou": "Zhen Shen Tou is an attacking tesuji that presses directly to create weaknesses. It appears in fights to limit escape routes or create cutting points, and it requires accurate reading. Best used with supporting influence.",
+  "joseki_comment_star_point_two_space_high_approach": "The two-space high approach to the star point emphasizes speed and outside influence, keeping distance for flexible development. Black usually chooses a pincer or a solid defense to set the scale of the fight. With the right pincer direction Black can gain initiative quickly; a wrong direction lets White switch smoothly. The key is converting outside influence into real profit or attack.",
+  "joseki_comment_star_point_one_space_low_approach": "The one-space low approach to the star point dives into the corner with a strong territorial aim. Black usually pincers or blocks to define the direction of play, while White may back off or fight depending on the whole board. Variations are not too complex, but direction is critical. Good when you want quick stabilization and sente.",
+  "joseki_comment_star_point_small_knight_defense": "The star-point small-knight defense is a solid shape that settles the corner quickly while keeping flexibility. White gains outside influence and often sente, but Black's corner is secure and valuable. It's a practical choice for steady development. The follow-up depends on how Black coordinates with the outside influence.",
+  "joseki_comment_komoku_low_approach": "The low approach to komoku immediately pressures the corner and sets a fast pace. Black can pincer to build an attack or defend the corner for stability. This line is common when you want to establish the position quickly. The key is whether Black can turn outside influence into initiative.",
+  "joseki_comment_komoku_one_space_low_approach_low_response": "The low response to the one-space low approach aims for stability with a compact shape and possible sente. White gets thicker outside and can often turn to bigger areas. The line is simple, but direction still matters. Suitable for steady openings.",
+  "joseki_comment_komoku_one_space_low_approach_pincer": "Choosing a pincer after the komoku low approach goes straight into fighting and shows Black's aggressive intent. If White handles it well, White can escape lightly and take outside influence; if not, White can be surrounded. This variation demands good direction and reading and often affects the whole board. Use it when you want to take the initiative.",
+  "joseki_comment_takamoku_low_approach": "The low approach to takamoku lets White enter quickly; Black must choose between solid defense and active counterplay. White usually gains a bit more outside influence, while Black secures steady corner territory. The outcome depends on how efficiently Black uses outside influence. Good when balancing territory and influence.",
+  "joseki_comment_takamoku_small_knight_response": "The small-knight response to takamoku emphasizes flexibility, keeping outside influence while avoiding heavy shape. White can back off or increase pressure depending on the whole board. This line is common when global balance matters. The key is whether Black can turn the outside strength into active attacks.",
+  "joseki_comment_san_san_outer_hane": "The outer-hane 3-3 joseki gives White strong outside thickness while Black keeps a solid corner. The outer hane leaves White's strength on the outside for later development. Black must watch connections under outside pressure and add follow-up moves as needed. Suitable for solid, territory-oriented play.",
+  "joseki_comment_san_san_inner_hane": "The inner-hane 3-3 joseki is sharper and more combative. If Black mishandles it, Black can be cut; White also risks losing too much corner territory. It requires strong reading and is closely tied to the whole-board fight. Use it when you have support and need a tough answer.",
+  "joseki_comment_mokuhazushi_high_approach": "Mokuhazushi high approach is a flexible choice, balancing outside influence and territory. Black can defend solidly or counterattack depending on the whole board. The position usually stays unsettled and leads to many variations. Good when you want to keep flexibility.",
+  "joseki_comment_two_star_fuseki": "Two-star fuseki emphasizes speed and central influence with two early star points. White often reduces from the sides or takes corners to balance it. The opening is flexible and adapts to the whole board. The key is converting influence into real profit.",
+  "joseki_comment_four_star_fuseki": "Four-star fuseki maximizes central influence but leaves corners light. White usually invades or takes corners quickly to restrain Black's framework. It's highly aggressive with low margin for error. Best for players who excel at attacking and managing large frameworks.",
+  "joseki_comment_mini_chinese_fuseki": "Mini Chinese fuseki favors a more solid territorial balance than the full Chinese, with a smaller but steadier framework. Black builds a potential lower-side framework while keeping room to pivot. White typically reduces or invades to challenge it. Good when you want balance between territory and influence.",
+  "joseki_comment_variant_kobayashi_fuseki": "The variant Kobayashi fuseki adjusts the extension direction for more flexible offense and defense. Black balances territory and influence with stronger side control. If White reduces the lower side, Black can switch into attack. Suits players who are good at midgame transitions.",
+  "joseki_comment_side_two_space_extension_attach_cut": "After a two-space side extension, the attach-and-cut often triggers local fighting. Shapes are tight but variations are many. When Black uses the attach-and-cut to take initiative, Black must watch for counter-cuts. This line demands good direction and reading. Use it when you want to fight actively on the side.",
+  "joseki_comment_side_small_knight_defense_toe": "Against a toe-and-retreat after a side small-knight defense, Black can keep a stable shape and aim for sente. White's toe-retreat tries to reduce side influence; Black must avoid being pressed low. The line is simple and practical for quick settling on the side. The follow-up depends on whether Black can develop smoothly.",
+  "joseki_comment_lower_side_invasion_shoulder_hit": "A shoulder-hit invasion on the lower side is a common way to break a framework lightly and seek life. If Black handles it well, Black gains thickness; if not, White settles easily. The key is light, fast play. Use it when the opponent's framework is too large.",
+  "joseki_comment_framework_reduction_shoulder_hit": "A shoulder-hit reduction is a steady way to shrink a large framework rather than break it outright. If Black overchases, White can escape easily. The line emphasizes light, efficient play and avoids heavy fights. Useful when you want to control the pace.",
+  "joseki_comment_contact_fight_hane_cut": "Contact fighting with hane-and-cut is very sharp and local variations are intense. Both sides need precise reading or risk being cut or overconcentrated. It is closely tied to the whole-board fight and cannot be judged in isolation. Best for players with strong reading who are willing to fight.",
   "joseki_completed": "Joseki completed!",
   "joseki_correct_continue": "Correct! Continue to the next move.",
   "joseki_dictionary": "Joseki Dictionary",
@@ -251,6 +271,26 @@
   "joseki_name_three_star_fuseki": "Three-Star Fuseki",
   "joseki_name_three_three_invasion": "3-3 Invasion",
   "joseki_name_zhen_shen_tou": "Zhen Shen Tou",
+  "joseki_name_star_point_two_space_high_approach": "Star Point Two-space High Approach",
+  "joseki_name_star_point_one_space_low_approach": "Star Point One-space Low Approach",
+  "joseki_name_star_point_small_knight_defense": "Star Point Small Knight Defense",
+  "joseki_name_komoku_low_approach": "Komoku Low Approach",
+  "joseki_name_komoku_one_space_low_approach_low_response": "Komoku One-space Low Approach (Low Response)",
+  "joseki_name_komoku_one_space_low_approach_pincer": "Komoku One-space Low Approach (Pincer)",
+  "joseki_name_takamoku_low_approach": "Takamoku Low Approach",
+  "joseki_name_takamoku_small_knight_response": "Takamoku Small Knight Response",
+  "joseki_name_san_san_outer_hane": "3-3 Joseki - Outer Hane",
+  "joseki_name_san_san_inner_hane": "3-3 Joseki - Inner Hane",
+  "joseki_name_mokuhazushi_high_approach": "Mokuhazushi High Approach",
+  "joseki_name_two_star_fuseki": "Two-Star Fuseki",
+  "joseki_name_four_star_fuseki": "Four-Star Fuseki",
+  "joseki_name_mini_chinese_fuseki": "Mini Chinese Fuseki",
+  "joseki_name_variant_kobayashi_fuseki": "Variant Kobayashi Fuseki",
+  "joseki_name_side_two_space_extension_attach_cut": "Side Two-space Extension - Attach and Cut",
+  "joseki_name_side_small_knight_defense_toe": "Side Small Knight Defense - Toe Retreat",
+  "joseki_name_lower_side_invasion_shoulder_hit": "Lower Side Invasion - Shoulder Hit",
+  "joseki_name_framework_reduction_shoulder_hit": "Framework Reduction - Shoulder Hit",
+  "joseki_name_contact_fight_hane_cut": "Contact Fight - Hane and Cut",
   "joseki_no_active": "No active joseki training.",
   "joseki_result_better_black": "Better for Black",
   "joseki_result_better_white": "Better for White",
