--- a/assets/translations/ja.json
+++ b/assets/translations/ja.json
@@ -206,20 +206,40 @@
   "japanese_rules": "日本ルール",
   "jigo": "ジゴ",
   "joseki_already_completed": "この定石はすでに完了しています。",
-  "joseki_comment_avalanche_joseki": "複雑な雪崩定石。正確な読みが必要。",
-  "joseki_comment_chinese_fuseki": "中国流の布石。黒が大模様を築く。",
-  "joseki_comment_double_flying_goose_joseki": "双飛燕の形。外勢を強調。",
-  "joseki_comment_kobayashi_fuseki": "小林流布石。実地と外勢のバランス。",
-  "joseki_comment_komoku_high_approach_joseki": "小目高掛かり定石。変化が豊富。",
-  "joseki_comment_komoku_one_space_high_approach": "小目一間高掛かりの一般的な変化。",
-  "joseki_comment_san_san_basic": "基本的な三三定石。黒は角の実地、白は外勢。",
-  "joseki_comment_star_point_small_approach": "星位小ゲ掛かりへの基本応手。",
-  "joseki_comment_star_point_small_approach_joseki": "星位小ゲ掛かりは最も一般的な定石の一つ。",
-  "joseki_comment_taisha_joseki": "大斜定石の基本形。",
-  "joseki_comment_takamoku_basic": "高目定石は外勢を重視。",
-  "joseki_comment_three_star_fuseki": "三連星の布石。中央勢力を重視。",
-  "joseki_comment_three_three_invasion": "基本的な三三侵入定石。形勢は互角。",
-  "joseki_comment_zhen_shen_tou": "鎮神頭の戦術。攻めに用いる。",
+  "joseki_comment_avalanche_joseki": "雪崩定石は激しい打ち合いが続く難解な定石。勝敗は精密な読みと局所の強さに依存する。全局で戦える体制がある時に選びたい。",
+  "joseki_comment_chinese_fuseki": "中国流布石は星位・小目・低い展開で下辺に大模様を作る。白は打ち込みや侵消で崩しにくるため、黒は囲いか交換かの判断が必要。中盤の攻勢を見据えた布石。",
+  "joseki_comment_double_flying_goose_joseki": "双飛燕は辺で飛び形を連結し、スピードと外勢を重視する。黒は連続の飛びで勢力を伸ばすが、切断や押さえ込みに注意。外勢を攻めや実地に変えるのが要点。",
+  "joseki_comment_kobayashi_fuseki": "小林流布石は星位・小目と高い展開で実地と外勢を両立する。白は上辺から侵消することが多く、黒は攻守の切り替えが鍵。柔軟な対応が得意な棋風向け。",
+  "joseki_comment_komoku_high_approach_joseki": "小目高掛かり定石は変化が豊富で、小ゲ・挟み・受けなど選択肢が多い。実地と外勢の交換になりやすいが、全局で最善が変わる。白の厚みを与えすぎないよう注意。",
+  "joseki_comment_komoku_one_space_high_approach": "小目一間高掛かりは外勢とスピードを狙う。黒は挟みで攻めるか、角を守って安定するかを選ぶ。方向判断と分断への対処がポイント。",
+  "joseki_comment_san_san_basic": "基本的な三三定石で、黒は角に入り扳粘して実地を確保。白は外に張り出して厚みを作り、先手で展開することが多い。黒は外勢の圧力に注意。",
+  "joseki_comment_star_point_small_approach": "星位小ゲ掛かりの基本型で、黒は角地、白は外勢という分かりやすい交換。白は先手で拡張し、黒は角を安定させる。入門用の基礎定石として有用。",
+  "joseki_comment_star_point_small_approach_joseki": "星位小ゲ掛かりは最も一般的な序盤の一つ。黒は挟みか受けで戦いの規模を決める。形の効率と方向が重要で、低く押さえ込まれないようにする。",
+  "joseki_comment_taisha_joseki": "大斜定石は分岐が多く戦闘的で、読みの精度が要求される。厚みと実地のバランスは全局に左右される。先手判断が重要で、支えがある局面で選びたい。",
+  "joseki_comment_takamoku_basic": "高目基本型は外勢とスピードを重視し、角の実地は控えめにする。黒は外へ厚く伸び、白は侵消で対抗する。積極的な展開に向く。",
+  "joseki_comment_three_star_fuseki": "三連星布石は星位を連ねて大模様を築き、中央勢力とスピードを重視する。白は左右から侵消したり戦いを仕掛けたりするので、黒は辺角の展開が重要。攻撃的な棋風に向く。",
+  "joseki_comment_three_three_invasion": "三三侵入は角に踏み込んで素早く生き地を確保する定石。白は外勢を厚くして先手を取りやすい。外勢を実利に変えられるかが要点。",
+  "joseki_comment_zhen_shen_tou": "鎮神頭は攻めの手筋で、密着して弱点を作る。戦闘で相手の逃げ道や切断点を制限するため、読みが必要。自分の外勢がある局面で効果的。",
+  "joseki_comment_star_point_two_space_high_approach": "星位二間高掛かりはスピードと外勢を重視し、白は距離を取って柔軟に展開する。黒は挟みか受けで戦いの規模を決める。挟む方向が良ければ黒が主導権を握り、方向が悪いと白が軽く転身する。外勢を実利や攻めに結び付けることが要点。",
+  "joseki_comment_star_point_one_space_low_approach": "星位一間低掛かりは角に深く入り、実地志向が強い。黒は挟みやブロックで方向を明確にし、白は全局を見て退くか強く戦うかを選ぶ。変化は比較的シンプルだが方向感が重要。早く形を決めて先手を取りたい局面向き。",
+  "joseki_comment_star_point_small_knight_defense": "星位小ゲ受けは堅実な形で、黒が角地を早く安定させ柔軟さも保つ。白は外勢と先手を得やすいが、黒の角地は明確。全局で堅実に進めたい時に実用的。以後は外勢との連携が鍵。",
+  "joseki_comment_komoku_low_approach": "小目低掛かりは角を圧縮し、白の意図がはっきりした早いテンポの掛かり。黒は挟んで攻めるか守って安定するかを選ぶ。早く形勢を整えたい対局でよく出る。外勢を主導権に変えられるかが要点。",
+  "joseki_comment_komoku_one_space_low_approach_low_response": "小目一間低掛かりの低応は安定重視で、黒は形を締めて先手を狙う。白は外勢が厚く、次に大場へ向かいやすい。シンプルだが方向判断は重要。堅実な序盤に向く。",
+  "joseki_comment_komoku_one_space_low_approach_pincer": "小目低掛かりに挟むと戦闘的になり、黒の積極的な意図が表れる。白がうまく処理すれば軽く逃げて外勢を取れるが、失敗すると包囲されやすい。方向感と読みが要求され、全局にも影響しやすい。攻めに出たい局面向き。",
+  "joseki_comment_takamoku_low_approach": "高目低掛かりは白が角に入りやすく、黒は受けか反撃を選ぶ。白は外勢でやや得をしやすいが、黒は安定した角地を得る。黒の外勢活用次第で評価が変わる。実地と外勢のバランスを取りたい局面向き。",
+  "joseki_comment_takamoku_small_knight_response": "高目小ゲ受けは柔軟さ重視で、黒は外勢を保ちつつ重くならない形を目指す。白は全局を見て退くか圧力を強めるか選択できる。全局バランス重視の局面でよく現れる。外勢を攻めに転化できるかが鍵。",
+  "joseki_comment_san_san_outer_hane": "三三定石・外ハネは白の外勢の厚みを重視し、黒は角地を堅く守る。外ハネは白の厚みを外側に作り、後の展開に活用しやすい。黒は外勢の圧力下での連絡や補いに注意。堅実な実地志向の局面向き。",
+  "joseki_comment_san_san_inner_hane": "三三定石・内ハネはより鋭い戦闘になりやすい。黒が誤ると分断されやすく、白も角地を失いすぎないよう注意が必要。読みの力が求められ、全局の戦いと密接に関係する。支えがあり強く応じたい局面向き。",
+  "joseki_comment_mokuhazushi_high_approach": "目外し高掛かりは柔軟性の高い選択で、白は外勢と実地のバランスを取る。黒は全局次第で受けても反撃してもよい。早く定型にならず変化が多い。柔軟性を残したい局面向き。",
+  "joseki_comment_two_star_fuseki": "二連星布石はスピードと中央勢力を重視し、黒が二つの星位を先に取る。白は辺から侵消したり角を取ったりしてバランスを取る。自由度が高く全局に応じて展開できる。勢力を実利に変えることが鍵。",
+  "joseki_comment_four_star_fuseki": "四連星布石は中央勢力を最大化するが、角の実地は薄い。白は侵消や角取りで黒の勢力を抑えることが多い。攻撃的でリスクも高い布石。大模様運営に自信のある棋風向き。",
+  "joseki_comment_mini_chinese_fuseki": "ミニ中国流は中国流より実地重視で、模様は小さいが安定する。黒は下辺に潜在的な枠を作りつつ転身の余地を残す。白は侵消や打ち込みで模様を崩しにくる。実地と外勢のバランスを取りたい時に適する。",
+  "joseki_comment_variant_kobayashi_fuseki": "変型小林流布石は小林流の方向を調整し、より柔軟な攻守転換を狙う。黒は実地と外勢のバランスを取りつつ辺の制圧を重視する。白が下辺を侵消すれば黒は攻めに転じやすい。中盤の切り替えが得意な棋風向き。",
+  "joseki_comment_side_two_space_extension_attach_cut": "辺二間ビラキの後のツケ切りは局所戦闘になりやすく、形は締まるが変化が多い。黒が主導権を取ろうとする際は逆襲の切断に注意が必要。方向感と読みが要求される。辺で主導権を取りたい時に用いる。",
+  "joseki_comment_side_small_knight_defense_toe": "辺小ゲ受けに対するツケ引きは、黒が形を安定させつつ先手を狙える。白は辺の勢力を削る意図で、黒は押さえ込まれないよう注意する。シンプルで実用的な定型。以後は黒がスムーズに展開できるかが鍵。",
+  "joseki_comment_lower_side_invasion_shoulder_hit": "下辺打ち込みの肩ツキは、模様を軽く崩しつつ生きる狙いの侵入。黒がうまく対処すれば厚みを得られるが、少しでも緩むと白が安定する。軽さとスピードが重要。相手の模様が大きすぎる時に有効。",
+  "joseki_comment_framework_reduction_shoulder_hit": "大模様消しの肩ツキは、模様を圧縮する穏健な手段で、無理に破る狙いではない。黒が追い過ぎると白が容易に出る。軽さと効率を重視し、過重な戦いを避ける。局面のペースをコントロールしたい時に有効。",
+  "joseki_comment_contact_fight_hane_cut": "接触戦・ハネ切りは接近戦からのハネ切りで非常に鋭い。局所変化が激しく、両者とも精密な読みが必要で、誤れば分断や過重になりやすい。全局戦と密接に関わるため局所だけで判断できない。読みが強く戦闘を厭わない棋風向き。",
   "joseki_completed": "定石を完了しました！",
   "joseki_correct_continue": "正解！次の手へ進んでください。",
   "joseki_dictionary": "定石辞典",
@@ -243,6 +263,26 @@
   "joseki_name_three_star_fuseki": "三連星布石",
   "joseki_name_three_three_invasion": "三三侵入",
   "joseki_name_zhen_shen_tou": "鎮神頭",
+  "joseki_name_star_point_two_space_high_approach": "星位二間高掛かり",
+  "joseki_name_star_point_one_space_low_approach": "星位一間低掛かり",
+  "joseki_name_star_point_small_knight_defense": "星位小ゲ受け",
+  "joseki_name_komoku_low_approach": "小目低掛かり",
+  "joseki_name_komoku_one_space_low_approach_low_response": "小目一間低掛かり・低応",
+  "joseki_name_komoku_one_space_low_approach_pincer": "小目一間低掛かり・挟み",
+  "joseki_name_takamoku_low_approach": "高目低掛かり",
+  "joseki_name_takamoku_small_knight_response": "高目小ゲ受け",
+  "joseki_name_san_san_outer_hane": "三三定石・外ハネ",
+  "joseki_name_san_san_inner_hane": "三三定石・内ハネ",
+  "joseki_name_mokuhazushi_high_approach": "目外し高掛かり",
+  "joseki_name_two_star_fuseki": "二連星布石",
+  "joseki_name_four_star_fuseki": "四連星布石",
+  "joseki_name_mini_chinese_fuseki": "ミニ中国流",
+  "joseki_name_variant_kobayashi_fuseki": "変型小林流布石",
+  "joseki_name_side_two_space_extension_attach_cut": "辺二間ビラキ・ツケ切り",
+  "joseki_name_side_small_knight_defense_toe": "辺小ゲ受け・ツケ引き",
+  "joseki_name_lower_side_invasion_shoulder_hit": "下辺打ち込み・肩ツキ",
+  "joseki_name_framework_reduction_shoulder_hit": "大模様消し・肩ツキ",
+  "joseki_name_contact_fight_hane_cut": "接触戦・ハネ切り",
   "joseki_no_active": "進行中の定石トレーニングはありません。",
   "joseki_result_better_black": "黒が良い",
   "joseki_result_better_white": "白が良い",
