--- a/assets/translations/zh.json
+++ b/assets/translations/zh.json
@@ -241,20 +241,40 @@
   "jigo": "和棋",
   "join_game": "加入房间",
   "joseki_already_completed": "该定式已完成。",
-  "joseki_comment_avalanche_joseki": "复杂的雪崩定式，需要精确计算",
-  "joseki_comment_chinese_fuseki": "中国流开局，黑棋构筑大模样",
-  "joseki_comment_double_flying_goose_joseki": "双飞燕阵型，强调外势",
-  "joseki_comment_kobayashi_fuseki": "小林流布局，平衡实地与外势",
-  "joseki_comment_komoku_high_approach_joseki": "小目高挂定式，变化丰富",
-  "joseki_comment_komoku_one_space_high_approach": "小目一间高挂的常见变化",
-  "joseki_comment_san_san_basic": "最基本的三三定式，黑角实地，白获外势",
-  "joseki_comment_star_point_small_approach": "星位小飞挂角的基本应对",
-  "joseki_comment_star_point_small_approach_joseki": "星位小飞挂是最常见的定式之一",
-  "joseki_comment_taisha_joseki": "大斜定式的基本型",
-  "joseki_comment_takamoku_basic": "高目定式强调外势",
-  "joseki_comment_three_star_fuseki": "三连星布局，重视中央势力",
-  "joseki_comment_three_three_invasion": "基础的3-3点入侵定式，双方均势",
-  "joseki_comment_zhen_shen_tou": "镇神头战术，用于攻击",
+  "joseki_comment_avalanche_joseki": "雪崩定式以激烈的打吃和反击著称，变化复杂而且对力量对比极敏感。胜负往往取决于精准的阅读与先手判断。使用前需评估全局战斗力与后续连络。",
+  "joseki_comment_chinese_fuseki": "中国流以星位、小目和低拆构建下边大模样，强调厚势与潜在扩张。白常在下边打入或侵消，黑需要在围与弃之间灵活选择。若黑能保持外势并顺势攻击，模样威力很大；若被削弱则实地不足。此布局重视方向与攻击节奏，常在中盘形成主动权。适合喜欢以外势驱动战斗的棋风。",
+  "joseki_comment_double_flying_goose_joseki": "双飞燕在边上形成连贯的飞形，追求速度与外势的连络。黑通过连续飞出扩大势力，但也要防范对方在边上切断或压制。外势若能配合全局攻击，收益很高；否则容易被侵消。关键是保持连接与轻灵，避免过重。适合注重势与速度的布局。",
+  "joseki_comment_kobayashi_fuseki": "小林流以星位、小目配合边上高拆构成，平衡实地与外势，强调对边路的控制。白方常从上边或侵消下边模样，黑需在攻与守之间迅速转换。若黑能利用外势攻击白的薄味，收益可观；但若被侵消过多，则模样价值下降。布局节奏感很强，对方向判断要求高。适合灵活转换的棋风。",
+  "joseki_comment_komoku_high_approach_joseki": "小目高挂变化多样，黑可小飞、夹或托等，应对思路各异。通常呈现黑取实地、白取外势的平衡，但全局配置会影响选择。夹击需要注意对方反击与分断，守角则要考虑外势的代价。白若获得厚势，后续在边上展开会很有力。适合在方向判断清晰时选择最顺手的变化。",
+  "joseki_comment_komoku_one_space_high_approach": "小目一间高挂追求外势与速度，常引出夹击或守角的定式选择。黑若夹击可形成攻势，但需防止被反击拉开战线；守角则更稳健。关键在于方向选择与后续分断处理，避免局部过重。白外势成形后往往带先手扩张，因此黑要把握后续补强。适合强调节奏与方向感的布局。",
+  "joseki_comment_san_san_basic": "最基础的三三定式，黑入角后扳粘成形，形状紧凑而易于做活。白方外拐厚实，常带先手去布局或进攻。黑需注意外势压迫与边上断点，适时补强以避免被围攻。白则要将外势转化为实利，否则会被后续侵消。适合追求稳健实地与简明变化的布局。",
+  "joseki_comment_star_point_small_approach": "星位小飞挂角的基本应对主线，黑守角、白取外势的交换较为清晰。白外面加固后常带先手扩张，黑则力求安定角地。后续在边上补强或拆边的时机很关键，否则容易被侵消。作为入门定式，它展示了实地与外势的典型交换。适合作为基础模板反复练习。",
+  "joseki_comment_star_point_small_approach_joseki": "星位小飞挂是最常见的开局之一，黑可选择一间夹、二间夹或单关来控制战斗规模。夹击重视攻击与外势，但方向判断极其关键；单关则偏稳健。白的应对种类多，既可二间跳也可托退，处理不好容易被压低。关键是保持形状效率并把外势兑现为进攻或实地。适合愿意主动争夺方向与节奏的棋风。",
+  "joseki_comment_taisha_joseki": "大斜定式变化繁复，局部战斗性强，对阅读力要求高。双方围绕厚势与实地取舍展开，很多分支与全局形势密切相关。若判断失误容易陷入被动或走向过重。选择时需有全局支撑并善于把握先手。适合经验丰富且擅长处理复杂战斗的棋风。",
+  "joseki_comment_takamoku_basic": "高目基本型强调外势与速度，黑在角部不追求最大实地，换取向外发展的厚势。白常从边角侵消或利用外势不足之处，迫使黑做出方向选择。黑若外势能配合全局攻击，收益很高；若被削减则可能吃亏。此型更适合中盘战斗准备充分的局面。对大局判断要求较高。",
+  "joseki_comment_three_star_fuseki": "三连星以三颗星位连成模样，黑重视中央势力与速度，不急于抢地。白方常选择从两翼侵消或直接战斗，黑需配合边角发展以兑现外势。若外势与攻击配合得当，中盘非常主动；但若过于空泛容易被分割。此布局对全局厚势运营能力要求高。适合攻势型的棋风。",
+  "joseki_comment_three_three_invasion": "在星位或小目角直接点三三，黑方迅速安定角地并获得明确实地。白方外势厚实且往往先手发展，需要结合全局形势发挥。若白外势无配合，黑角地价值很高，局部反而有利。黑要留意外势压迫下的连接与活力。适用于削减对方大模样或需要稳健实地的局面。",
+  "joseki_comment_zhen_shen_tou": "镇神头是攻防转换中的攻击手筋，通过贴身压迫制造对方弱点。多用于战斗中限制对方出头或连络，需要计算逃跑路线与切断点。若己方有外势支撑，镇神头会非常有效；若无支援则容易反被攻击。它强调时机与距离的把握。适合在优势外势下主动压迫。",
+  "joseki_comment_star_point_two_space_high_approach": "星位二间高挂强调速度与外势，白方保持距离以便灵活展开。黑常选择夹击或稳守，决定战斗规模。若黑夹击方向正确，能迅速获得主动；若方向失误，白容易轻松转换。关键在于把外势兑现成实利或攻击。",
+  "joseki_comment_star_point_one_space_low_approach": "星位一间低挂直接进入角部，争夺实地的意图较强。黑通常以夹击或挡住来明确战斗方向，白也可根据全局选择退让或强硬。此型变化不算复杂，但方向感十分关键。适合在需要迅速定型并争取先手的局面使用。",
+  "joseki_comment_star_point_small_knight_defense": "星位小飞守角以稳健形状为主，黑迅速安定角地并保持灵活性。白方获得外势与先手，但黑的角地价值明确。若全局需要稳健布局，这条变化非常实用。后续关键在于黑如何配合外势进行转换。",
+  "joseki_comment_komoku_low_approach": "小目低挂直接压缩角地，白方意图明确，节奏较快。黑可选择夹击形成攻势，也可稳健守角以换取安定。此型常见于需要快速确立形势的对局。关键在于黑是否能利用外势取得主动。",
+  "joseki_comment_komoku_one_space_low_approach_low_response": "小目一间低挂的低应以安定为主，黑形状紧凑，争取先手。白方外势较厚，后续容易转向大场。此变化较为简明，但方向选择仍然重要。适合在需要稳健布局时使用。",
+  "joseki_comment_komoku_one_space_low_approach_pincer": "小目低挂后选择夹击会直接进入战斗模式，黑意图积极。白若处理得当可以轻盈脱身并获得外势；处理不当则容易被围攻。此变化强调方向感和读力，往往牵动全局。适合在局面需要主动出击时选择。",
+  "joseki_comment_takamoku_low_approach": "高目低挂使白方快速进入角部，黑需选择稳健应对或积极反击。白在外势上通常略占优势，但黑能获得稳定角地。局面取决于黑外势的利用效率。适合在需要平衡实地与外势的局面使用。",
+  "joseki_comment_takamoku_small_knight_response": "高目小飞应以灵活应战为主，黑保持外势并避免形状过重。白可根据全局选择退让或加强对角部的压力。此变化常见于需要兼顾全局的局面。后续关键在于黑外势是否能形成主动攻击。",
+  "joseki_comment_san_san_outer_hane": "三三定式外扳强调白方外势的厚度，黑角地较为稳固。外扳路线常把白的厚势放在外面，便于后续展开。黑需要注意在外势压迫下的连接和后续补棋。适合追求实地与稳健变化的局面。",
+  "joseki_comment_san_san_inner_hane": "三三定式内扳变化更激烈，局部战斗性强。黑若处理不当容易被分断，白也需注意角部实地的损失。此型对阅读力要求较高，通常与全局战斗关联紧密。适合在有支援且需要强硬应对时使用。",
+  "joseki_comment_mokuhazushi_high_approach": "目外高挂是较为灵活的选择，白在外势与实地之间寻求平衡。黑可根据全局选择稳守或积极反击。此型通常不会过早定型，后续变化较多。适合需要保留灵活性的局面。",
+  "joseki_comment_two_star_fuseki": "二连星布局强调速度与中央势力，黑通常先占两处星位。白会从边上侵消或占角来制衡。此布局变化自由度高，适合根据全局快速展开。关键在于黑如何把势力转化为实际收益。",
+  "joseki_comment_four_star_fuseki": "四连星布局追求最大化中央势力，但角部实地相对薄弱。白方通常会选择快速侵消或占角来牵制黑势力。此布局极具攻击性，容错率较低。适合擅长攻势与大模样运营的棋风。",
+  "joseki_comment_mini_chinese_fuseki": "迷你中国流在中国流基础上更注重实地，模样略小但更稳健。黑下边形成潜在框架，同时保留快速转身的空间。白通常会通过侵消或打入来挑战模样。适合在需要平衡实地与外势时采用。",
+  "joseki_comment_variant_kobayashi_fuseki": "变型小林流在传统小林流基础上调整拆边方向，以求更灵活的攻防转换。黑兼顾实地与外势，但更强调对边路的控制。白若侵消下边，黑可顺势转攻。适合擅长中盘转换的棋风。",
+  "joseki_comment_side_two_space_extension_attach_cut": "边上二间拆后被靠断常引发局部战斗，形状紧凑但变化较多。黑借助靠断取得主动时，需要注意被反击切断。此型对方向和读力要求较高。适合在边上需要主动争夺时使用。",
+  "joseki_comment_side_small_knight_defense_toe": "边上小飞守角后遇到托退，黑可保持形状稳定并争取先手。白的托退意图削弱边上势力，黑需避免被压低。此型简明实用，适合在边上快速定型。后续关键在于黑能否顺势展开。",
+  "joseki_comment_lower_side_invasion_shoulder_hit": "下边打入点肩是常见侵入手段，白意在轻轻破坏模样并寻求活棋。黑若处理得当可取得厚势，但稍有疏忽白就能安定。此型重视轻灵与速度。适合在对方模样过大时果断侵入。",
+  "joseki_comment_framework_reduction_shoulder_hit": "点肩消减是对付大模样的稳健手段，白意在压缩对方势力而不是强行破坏。黑若过度追击容易让白轻松出头。此型强调轻灵与效率，避免陷入过重战斗。适合在需要控制局面节奏时使用。",
+  "joseki_comment_contact_fight_hane_cut": "贴靠战斗强调近身接触后的扳断与切断，局部变化非常激烈。双方都需要精确计算，否则容易被分断或陷入过重。此型通常与全局战斗密切相关，不能脱离整体判断。适合读力较强并愿意搏杀的棋风。",
   "joseki_completed": "定式完成！",
   "joseki_correct_continue": "正确！继续下一手。",
   "joseki_dictionary": "定式词典",
@@ -279,6 +299,26 @@
   "joseki_name_three_star_fuseki": "三连星布局",
   "joseki_name_three_three_invasion": "3-3点入侵",
   "joseki_name_zhen_shen_tou": "镇神头",
+  "joseki_name_star_point_two_space_high_approach": "星位二间高挂",
+  "joseki_name_star_point_one_space_low_approach": "星位一间低挂",
+  "joseki_name_star_point_small_knight_defense": "星位小飞守角",
+  "joseki_name_komoku_low_approach": "小目低挂",
+  "joseki_name_komoku_one_space_low_approach_low_response": "小目一间低挂-低应",
+  "joseki_name_komoku_one_space_low_approach_pincer": "小目一间低挂-夹击",
+  "joseki_name_takamoku_low_approach": "高目低挂",
+  "joseki_name_takamoku_small_knight_response": "高目小飞应",
+  "joseki_name_san_san_outer_hane": "三三定式-外扳",
+  "joseki_name_san_san_inner_hane": "三三定式-内扳",
+  "joseki_name_mokuhazushi_high_approach": "目外高挂",
+  "joseki_name_two_star_fuseki": "二连星布局",
+  "joseki_name_four_star_fuseki": "四连星布局",
+  "joseki_name_mini_chinese_fuseki": "迷你中国流",
+  "joseki_name_variant_kobayashi_fuseki": "变型小林流",
+  "joseki_name_side_two_space_extension_attach_cut": "边上二间拆-靠断",
+  "joseki_name_side_small_knight_defense_toe": "边上小飞守-托退",
+  "joseki_name_lower_side_invasion_shoulder_hit": "下边打入-点肩",
+  "joseki_name_framework_reduction_shoulder_hit": "大模样消减-点肩",
+  "joseki_name_contact_fight_hane_cut": "贴靠战斗-扳断",
   "joseki_no_active": "当前没有进行中的定式训练。",
   "joseki_result_better_black": "黑优",
   "joseki_result_better_white": "白优",
