--- a/文件结构.md
+++ b/文件结构.md
@@ -1,47 +1,65 @@
-
-├── main.py                 # 程序入口（精简至500行）
+├── main.py                 # 程序入口（综合管理，约2000行）
 ├── core/                   # 核心逻辑模块
 │   ├── __init__.py
-│   ├── board.py           # 棋盘类（从game_core.py拆分）
-│   ├── rules.py           # 规则引擎（从game_core.py拆分）
-│   ├── game.py            # 游戏控制（从game_core.py拆分）
-│   ├── territory.py       # 地盘和死活判定（从game_core.py拆分）
-│   └── scoring.py         # 计分系统（新增）
+│   ├── board.py           # 棋盘类
+│   ├── rules.py           # 规则引擎
+│   ├── game.py            # 游戏控制
+│   ├── territory.py       # 地盘和死活判定
+│   └── scoring.py         # 计分系统
 ├── ui/                     # UI模块
 │   ├── __init__.py
-│   ├── board_canvas.py    # 棋盘绘制（从ui_components.py拆分）
-│   ├── panels.py          # 各种面板（从ui_components.py拆分）
-│   ├── dialogs.py         # 对话框（从ui_components.py拆分）
-│   ├── themes.py          # 主题管理（从ui_components.py拆分）
-│   └── animations.py      # 动画效果（新增）
+│   ├── board_canvas.py    # 棋盘绘制
+│   ├── panels.py          # 各种面板（侧边栏、状态栏等）
+│   ├── dialogs.py         # 对话框（设置、保存、消息等）
+│   ├── themes.py          # 主题管理
+│   ├── animations.py      # 动画效果
+│   ├── game_tree.py       # 棋谱树状图 [新增]
+│   ├── help.py            # 帮助说明界面 [新增]
+│   ├── joseki_dictionary.py # 定式字典界面 [新增]
+│   ├── pattern_search.py   # 局部搜索界面 [新增]
+│   ├── problem_library.py  # 题目库界面 [新增]
+│   └── translator.py      # UI翻译适配 [新增]
 ├── ai/                     # AI模块
 │   ├── __init__.py
-│   ├── base.py            # AI基类（从ai_engine.py拆分）
+│   ├── base.py            # AI基类
 │   ├── simple_ai.py       # 简单AI（随机、贪心）
 │   ├── search_ai.py       # 搜索AI（极小极大、MCTS）
 │   ├── pattern_ai.py      # 模式AI（定式、战术）
-│   └── neural_ai.py       # 神经网络AI（新增）
-├── features/               # 功能模块（新增）
+│   └── neural_ai.py       # 神经网络AI
+├── features/               # 功能模块
 │   ├── __init__.py
 │   ├── replay.py          # 复盘系统
 │   ├── analysis.py        # 分析引擎
-│   ├── joseki.py          # 定式库
+│   ├── joseki.py          # 定式库逻辑
 │   ├── teaching.py        # 教学系统
-│   └── network.py         # 网络对战（预留）
+│   └── network.py         # 网络对战
 ├── utils/                  # 工具模块
 │   ├── __init__.py
-│   ├── config.py          # 配置管理（从utils.py拆分）
-│   ├── sound.py           # 音效管理（从utils.py拆分）
-│   ├── sgf.py             # SGF处理（从utils.py拆分）
-│   ├── timer.py           # 计时器（从utils.py拆分）
-│   ├── translator.py      # 翻译系统（从utils.py拆分）
-│   ├── storage.py         # 存储管理（从utils.py拆分）
-│   └── statistics.py      # 统计系统（从utils.py拆分）
-└── assets/                 # 资源文件
-    ├── translations/       # 翻译文件（新增）
-    │   ├── zh.json
-    │   ├── en.json
-    │   └── ja.json
-    ├── joseki/            # 定式数据
-    │   └── joseki_db.json
-    └── ...                # 其他资源
+│   ├── config.py          # 配置管理
+│   ├── content_db.py      # 内容数据库（题目、定式等）[新增]
+│   ├── hotkeys.py         # 热键映射 [新增]
+│   ├── sound.py           # 音效管理
+│   ├── sgf.py             # SGF处理
+│   ├── timer.py           # 计时器
+│   ├── translator.py      # 翻译系统
+│   ├── storage.py         # 存储管理
+│   ├── user_db.py         # 用户数据数据库 [新增]
+│   └── statistics.py      # 统计系统
+├── assets/                 # 资源文件
+│   ├── config/            # 配置文件
+│   ├── content_packs/     # 内容包（题目包等）
+│   ├── icons/             # 图标资源
+│   ├── images/            # 图片资源
+│   ├── joseki/            # 定式数据
+│   ├── puzzle_packs/      # 题目包数据
+│   ├── saves/             # 存档模板或默认存档
+│   ├── sgf/               # SGF模板
+│   ├── sounds/            # 音效文件
+│   ├── themes/            # 主题定义
+│   └── translations/       # 翻译文件（zh.json, en.json等）
+├── tests/                  # 测试用例 [新增]
+├── saves/                  # 运行时生成的存档目录 [新增]
+├── sgf/                    # 运行时生成的SGF目录 [新增]
+├── readme.md               # 项目自述文件 [新增]
+├── requirements.txt        # 依赖清单 [新增]
+└── run.sh                  # 运行脚本 [新增]
