文字暨UI组件完善

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -100,6 +100,7 @@
   "comment_evaluation_label": "Evaluation",
   "confirm": "Confirm",
   "confirm_clear_board": "Are you sure you want to clear the board?",
+  "confirm_overwrite_file": "File already exists. Overwrite?",
   "confirm_exit": "Game in progress. Are you sure you want to exit?",
   "confirm_exit_message": "Game in progress. Are you sure you want to exit?",
   "confirm_resign": "Are you sure you want to resign?",
@@ -498,8 +499,12 @@
   "save_as": "Save As",
   "save_current_game": "Save current game?",
   "save_default_name_format": "game_{timestamp}",
+  "save_format_sgf": "SGF record (.sgf)",
   "save_failed": "Save Failed",
   "save_game": "Save Game",
+  "save_location": "Save location",
+  "sgf_extension_warning": "Only .sgf is supported; the file will be saved as .sgf.",
+  "save_sgf_hint": "Will be saved as an SGF file",
   "save_sgf": "Save as SGF",
   "score": "Score",
   "score_failed": "Failed to calculate score",
