--- a/assets/translations/ja.json
+++ b/assets/translations/ja.json
@@ -96,6 +96,7 @@
   "comment_evaluation_label": "評価",
   "confirm": "確認",
   "confirm_clear_board": "本当に盤面をクリアしますか？",
+  "confirm_overwrite_file": "ファイルは既に存在します。上書きしますか？",
   "confirm_exit": "対局中です。本当に終了しますか？",
   "confirm_exit_message": "対局中です。終了しますか？",
   "confirm_resign": "本当に投了しますか？",
@@ -487,8 +488,12 @@
   "save_as": "名前を付けて保存",
   "save_current_game": "現在の対局を保存しますか？",
   "save_default_name_format": "game_{timestamp}",
+  "save_format_sgf": "SGF棋譜（.sgf）",
   "save_failed": "保存に失敗しました",
   "save_game": "対局を保存",
+  "save_location": "保存先",
+  "sgf_extension_warning": "対応形式は .sgf のみです。.sgf として保存します。",
+  "save_sgf_hint": "SGF棋譜として保存します",
   "save_sgf": "SGFとして保存",
   "score": "地を数える",
   "score_failed": "採点に失敗しました",
