--- a/assets/translations/zh.json
+++ b/assets/translations/zh.json
@@ -108,6 +108,7 @@
   "comment_evaluation_label": "评价",
   "confirm": "确认",
   "confirm_clear_board": "确定要清空棋盘吗？",
+  "confirm_overwrite_file": "文件已存在，是否覆盖？",
   "confirm_exit": "对局进行中，确定要退出吗？",
   "confirm_exit_message": "对局进行中，确定要退出吗？",
   "confirm_resign": "确定要认输吗？",
@@ -544,8 +545,12 @@
   "save_as": "另存为",
   "save_current_game": "是否保存当前对局？",
   "save_default_name_format": "game_{timestamp}",
+  "save_format_sgf": "SGF 棋谱（.sgf）",
   "save_failed": "保存失败",
   "save_game": "保存对局",
+  "save_location": "保存位置",
+  "sgf_extension_warning": "仅支持 .sgf 格式，将自动保存为 .sgf。",
+  "save_sgf_hint": "将保存为 SGF 棋谱文件",
   "save_sgf": "保存为SGF",
   "score": "数子",
   "score_failed": "计算分数失败",
